--- a/main.ipynb
+++ b/main.ipynb
@@ -1,75 +1,29 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "collapsed_sections": [
-        "OvQqgdXMINpN",
-        "vF1d-My9IXXt",
-        "MHMmgcVwJdaT"
-      ]
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    },
-    "accelerator": "GPU",
-    "gpuClass": "standard"
-  },
   "cells": [
     {
       "cell_type": "markdown",
-      "source": [
-        "# Install Packages"
-      ],
       "metadata": {
         "id": "OvQqgdXMINpN"
-      }
+      },
+      "source": [
+        "# Install Packages"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "!pip3 install -U scipy\n",
-        "\n",
-        "!git clone https://github.com/singhrau0/Human-Voice-Mimicking-System.git\n",
-        "\n",
-        "%cd /content/Human-Voice-Mimicking-System/HVM-main\n",
-        "!pip3 install -r requirements.txt\n",
-        "!pip3 install transformers==4.19.0 einops==0.5.0 rotary_embedding_torch==0.1.5 unidecode==1.3.5\n",
-        "!python3 setup.py install\n",
-        "\n",
-        "import torch\n",
-        "import torchaudio\n",
-        "import torch.nn as nn\n",
-        "import torch.nn.functional as F\n",
-        "\n",
-        "import IPython\n",
-        "\n",
-        "from tortoise.api import TextToSpeech\n",
-        "from tortoise.utils.audio import load_audio, load_voice, load_voices\n",
-        "\n",
-        "tts = TextToSpeech()\n",
-        "\n",
-        "import os\n",
-        "from google.colab import files"
-      ],
+      "execution_count": 1,
       "metadata": {
-        "id": "uC2qGJ0nITKW",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
         },
+        "id": "uC2qGJ0nITKW",
         "outputId": "bbfe8abe-3da1-489c-ca2b-53c99697a3f0"
       },
-      "execution_count": 1,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
             "Requirement already satisfied: scipy in /usr/local/lib/python3.9/dist-packages (1.10.1)\n",
@@ -569,9 +523,9 @@
           ]
         },
         {
-          "output_type": "error",
           "ename": "ModuleNotFoundError",
           "evalue": "ignored",
+          "output_type": "error",
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
             "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
@@ -580,85 +534,58 @@
             "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'tortoise'",
             "",
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0;32m\nNOTE: If your import is failing due to a missing package, you can\nmanually install dependencies using either !pip or !apt.\n\nTo view examples of installing some common dependencies, click the\n\"Open Examples\" button below.\n\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n"
-          ],
-          "errorDetails": {
-            "actions": [
-              {
-                "action": "open_url",
-                "actionText": "Open Examples",
-                "url": "/notebooks/snippets/importing_libraries.ipynb"
-              }
-            ]
-          }
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "%cd HVM-main/tortoise"
-      ],
-      "metadata": {
-        "id": "3xGUXmGicjeq",
-        "outputId": "f3850ba1-94d9-417c-ca94-e5cc5a4338da",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": 11,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "/content/HVM-main/HVM-main/tortoise\n"
           ]
         }
+      ],
+      "source": [
+        "!pip3 install -U scipy\n",
+        "\n",
+        "!git clone https://github.com/singhrau0/Human-Voice-Mimicking-System.git\n",
+        "\n",
+        "%cd /content/Human-Voice-Mimicking-System/HVM-main\n",
+        "!pip3 install -r requirements.txt\n",
+        "!pip3 install transformers==4.19.0 einops==0.5.0 rotary_embedding_torch==0.1.5 unidecode==1.3.5\n",
+        "!python3 setup.py install\n",
+        "\n",
+        "import torch\n",
+        "import torchaudio\n",
+        "import torch.nn as nn\n",
+        "import torch.nn.functional as F\n",
+        "\n",
+        "import IPython\n",
+        "\n",
+        "from tortoise.api import TextToSpeech\n",
+        "from tortoise.utils.audio import load_audio, load_voice, load_voices\n",
+        "\n",
+        "tts = TextToSpeech()\n",
+        "\n",
+        "import os\n",
+        "from google.colab import files"
       ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "# EDIT output 'text' and 'preset' quality then RUN"
-      ],
       "metadata": {
         "id": "vF1d-My9IXXt"
-      }
+      },
+      "source": [
+        "# EDIT output 'text' and 'preset' quality then RUN"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# This is the text that will be spoken.\n",
-        "text = \"Let's strive to make the world a better place, one code block at a time.\"\n",
-        "\n",
-        "# Pick a \"preset mode\" to determine quality. Options: {\"ultra_fast\", \"fast\" (default), \"standard\", \"high_quality\"}. See docs in api.py\n",
-        "preset = \"high_quality\"\n",
-        "\n",
-        "# upload at least 2 audio clips. They must be a WAV file, 6-10 seconds long.\n",
-        "CUSTOM_VOICE_NAME = \"custom\"\n",
-        "\n",
-        "custom_voice_folder = f\"tortoise/voices/{CUSTOM_VOICE_NAME}\"\n",
-        "os.makedirs(custom_voice_folder)\n",
-        "for i, file_data in enumerate(files.upload().values()):\n",
-        "  with open(os.path.join(custom_voice_folder, f'{i}.wav'), 'wb') as f:\n",
-        "    f.write(file_data)"
-      ],
+      "execution_count": 3,
       "metadata": {
-        "id": "4N9LSJ24IqOp",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 110
         },
+        "id": "4N9LSJ24IqOp",
         "outputId": "9efbeec2-8d13-4098-c07a-63ba14f8b0da"
       },
-      "execution_count": 3,
       "outputs": [
         {
-          "output_type": "display_data",
           "data": {
-            "text/plain": [
-              "<IPython.core.display.HTML object>"
-            ],
             "text/html": [
               "\n",
               "     <input type=\"file\" id=\"files-4825b07c-3043-4b8a-bbb6-1897992684b2\" name=\"files[]\" multiple disabled\n",
@@ -843,96 +770,104 @@
               "};\n",
               "})(self);\n",
               "</script> "
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
             ]
           },
-          "metadata": {}
+          "metadata": {},
+          "output_type": "display_data"
         },
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Saving You can't let your failures define you - Barack Obama.wav to You can't let your failures define you - Barack Obama.wav\n"
           ]
         }
+      ],
+      "source": [
+        "# This is the text that will be spoken.\n",
+        "text = \"Let's strive to make the world a better place, one code block at a time.\"\n",
+        "\n",
+        "# Pick a \"preset mode\" to determine quality. Options: {\"ultra_fast\", \"fast\" (default), \"standard\", \"high_quality\"}. See docs in api.py\n",
+        "preset = \"high_quality\"\n",
+        "\n",
+        "# upload at least 2 audio clips. They must be a WAV file, 6-10 seconds long.\n",
+        "CUSTOM_VOICE_NAME = \"custom\"\n",
+        "\n",
+        "custom_voice_folder = f\"tortoise/voices/{CUSTOM_VOICE_NAME}\"\n",
+        "os.makedirs(custom_voice_folder)\n",
+        "for i, file_data in enumerate(files.upload().values()):\n",
+        "  with open(os.path.join(custom_voice_folder, f'{i}.wav'), 'wb') as f:\n",
+        "    f.write(file_data)"
       ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "# Generate Audio File (clone voice) 👌"
-      ],
       "metadata": {
         "id": "MHMmgcVwJdaT"
-      }
+      },
+      "source": [
+        "# Generate Audio File (clone voice) 👌"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# Generate speech\n",
-        "voice_samples, conditioning_latents = load_voice(CUSTOM_VOICE_NAME)\n",
-        "gen = tts.tts_with_preset(text, voice_samples=voice_samples, conditioning_latents=conditioning_latents, \n",
-        "                          preset=preset)\n",
-        "torchaudio.save(f'generated-{CUSTOM_VOICE_NAME}.wav', gen.squeeze(0).cpu(), 24000)\n",
-        "IPython.display.Audio(f'generated-{CUSTOM_VOICE_NAME}.wav')"
-      ],
+      "execution_count": 4,
       "metadata": {
-        "id": "E-Wy_KAyJmTE",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 179
         },
+        "id": "E-Wy_KAyJmTE",
         "outputId": "0286c6be-5cf1-4d23-af91-db686c9c9395"
       },
-      "execution_count": 4,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Generating autoregressive samples..\n"
           ]
         },
         {
-          "output_type": "stream",
           "name": "stderr",
+          "output_type": "stream",
           "text": [
             "100%|██████████| 16/16 [01:23<00:00,  5.24s/it]\n"
           ]
         },
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Computing best candidates using CLVP\n"
           ]
         },
         {
-          "output_type": "stream",
           "name": "stderr",
+          "output_type": "stream",
           "text": [
             "100%|██████████| 16/16 [00:14<00:00,  1.08it/s]\n"
           ]
         },
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Transforming autoregressive outputs into audio..\n"
           ]
         },
         {
-          "output_type": "stream",
           "name": "stderr",
+          "output_type": "stream",
           "text": [
             "100%|██████████| 400/400 [01:15<00:00,  5.29it/s]\n"
           ]
         },
         {
-          "output_type": "execute_result",
           "data": {
-            "text/plain": [
-              "<IPython.lib.display.Audio object>"
-            ],
             "text/html": [
               "\n",
               "                <audio  controls=\"controls\" >\n",
@@ -940,21 +875,54 @@
               "                    Your browser does not support the audio element.\n",
               "                </audio>\n",
               "              "
+            ],
+            "text/plain": [
+              "<IPython.lib.display.Audio object>"
             ]
           },
+          "execution_count": 4,
           "metadata": {},
-          "execution_count": 4
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "# Generate speech\n",
+        "voice_samples, conditioning_latents = load_voice(CUSTOM_VOICE_NAME)\n",
+        "gen = tts.tts_with_preset(text, voice_samples=voice_samples, conditioning_latents=conditioning_latents, \n",
+        "                          preset=preset)\n",
+        "torchaudio.save(f'generated-{CUSTOM_VOICE_NAME}.wav', gen.squeeze(0).cpu(), 24000)\n",
+        "IPython.display.Audio(f'generated-{CUSTOM_VOICE_NAME}.wav')"
       ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "execution_count": null,
       "metadata": {
         "id": "0JSRoqkrfvSv"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": []
     }
-  ]
+  ],
+  "metadata": {
+    "accelerator": "GPU",
+    "colab": {
+      "collapsed_sections": [
+        "OvQqgdXMINpN",
+        "vF1d-My9IXXt",
+        "MHMmgcVwJdaT"
+      ],
+      "provenance": []
+    },
+    "gpuClass": "standard",
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
